apps/contibus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contibus
  labels:
    app: contibus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contibus
  template:
    metadata:
      labels:
        app: contibus
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: contibus
          image: registry.kvlk.hu/contibus:89-20336b9 # {"$imagepolicy": "flux-system:contibus-policy"}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
