apps/contibus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contibus-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-redirect-www-to-non-www@kubernetescrd,
      kube-system-secure-chain@kubernetescrd
spec:
  tls:
    - hosts:
        - contibus.hu
      secretName: contibus-tls
  rules:
    - host: contibus.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contibus-service
                port:
                  number: 80
